<resources>
    <string name="app_name">StudAv</string>
    <string name="item_default_price">Notes</string>
    <string name="button1">Ajouter élève</string>
    <string name="button2">Supprimer tout les élèves</string>
    <string name="button3">Liste des élèves</string>
    <string name="editText">Nom</string>
    <string name="editText2">Note</string>
    <string name="editText3">Coefficient</string>
    <string name="item_default_coeffs">Coefficients</string>
    <string name="item_default_name">Nom</string>

</resources>
